--- a/signUp.html
+++ b/signUp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title>G3 Messenger.sign in</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="signUp.css">
   </head>
     <body>
         <div class="container">
