--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messaging App G3</title>
     <meta http http-equiv="X-UA Compatible" content='ie=edge'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="landing.css">
     <link rel="shortcut icon" href="Netflix-favicon.png">
     <script src="https://kit.fontawesome.com/dac0bf7e7e.js" crossorigin="anonymous"></script> 
 </head>
