--- a/signIn.html
+++ b/signIn.html
@@ -6,7 +6,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title>G3 Messenger.sign in</title>
   </head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="signIn.css">
   <body>
 
 <!-- header nav -->
