--- a/newDashBoard.html
+++ b/newDashBoard.html
@@ -40,7 +40,7 @@
                 <i class="fas fa-bars"></i>
             </div>
             
-          G3 Messenger App
+          G3 Messenger
         </div>
         <div class="user">
           <div class="userProfile">
